--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,12 @@ logging:
   level:
     org.zalando.logbook: TRACE
     ru.yandex.practicum.filmorate: DEBUG
+
+spring:
+  sql.init.mode: always
+  # в jdbc-url укажите, что данные нужно сохранять в файл
+  datasource:
+    url: jdbc:h2:file:./db/filmorate
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
